--- a/config/templates/list.html
+++ b/config/templates/list.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Listar laboratorio</h1>
-    
+    <table>
+        <tbody>
+            {% for lab in labos %}
+            <tr>
+                <td>{{ lab.id }}</td>
+                <td>{{ lab.nombre }}</td>
+                <td>
+                    <a href="/update/{{ lab.id }}">Editar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
