--- a/config/templates/update.html
+++ b/config/templates/update.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Editar laboratorio</h1>
-    
+    <form method="post">
+        {% csrf_token %}
+        {{ formedicion.as_p }}
+        <button type="submit">Guardar</button>
+    </form>
 {% endblock %}
