--- a/config/templates/create.html
+++ b/config/templates/create.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Crear laboratorio</h1>
-    
+    <form method="post">
+        {% csrf_token %}
+
+        {{ formulario.as_p }}
+
+        <button type="submit">Guardar</button>
+    </form>
 {% endblock %}
