--- a/config/templates/list.html
+++ b/config/templates/list.html
@@ -10,6 +10,9 @@
                 <td>
                     <a href="/update/{{ lab.id }}">Editar</a>
                 </td>
+                <td>
+                    <a href="/delete/{{ lab.id }}">Eliminar</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
