--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -5,5 +5,14 @@
     <body>
         {% block content %}
         {% endblock %}
+        <footer>
+            <div>
+                Has visitado esta pagina {{ numveces }}.
+            </div>
+            <div>
+                <a>Ir a la pagina de inicio</a> | 
+                <a href="/create">Crear laboratorio</a>
+            </div>
+        </footer>
     </body>
 </html>
